# socks_io

./: CMakeLists.txt  Jamfile  README.md
.github/workflows/: ci.yml
cmake/: config.cmake.in
cmake/toolchains/: common.cmake
doc/: Jamfile
doc/qbk/: 0.main.qbk  1.0.overview.qbk  bind.qbk  connect.qbk  index.xml  protocol.qbk  quickref.xml
doc/xsl/: custom-overrides.xsl
extra/: test_main.cpp
extra/include/: test_suite.hpp
include/boost/: socks_io.hpp
include/boost/socks_io/: byte.hpp  connect_v4.hpp  error.hpp  src.hpp  status.hpp  string_view.hpp  version.hpp
include/boost/socks_io/detail/: config.hpp  copied_strings.hpp  except.hpp
include/boost/socks_io/detail/impl/: except.ipp
include/boost/socks_io/impl/: status.ipp  version.ipp
meta/: libraries.json
src/: src.cpp
test/: CMakeLists.txt  Jamfile
test/cmake_test/: CMakeLists.txt  main.cpp
test/limits/: CMakeLists.txt  Jamfile  limits.cpp
test/unit/: CMakeLists.txt  Jamfile  error.cpp  socks_io.cpp  status.cpp  string_view.cpp  test_helpers.cpp  test_helpers.hpp  version.cpp
